# simple-text-editor

./: README.md
GUI/: README.md
GUI/QT/: addfilenamewindow.cpp  addfilenamewindow.h  addfilenamewindow.ui  addtextwindow.ui  all_functions.cpp  howsavewindow.cpp  howsavewindow.ui  mainwindow.cpp  mainwindow.h  savenewfilename.cpp  savenewfilename.ui  searchwordwindow.cpp  searchwordwindow.h  searchwordwindow.ui  showcontentwindow.ui
console/: README.md
console/project/: all_functions.cpp  main_menu.cpp
text editor/: 1- adding content to the end.txt  10- search about a word.txt  11- count the number of word times in the file.txt  12- turn the whole words to uppercase.txt  13- turn whole words to lowercase.txt  14- turn each words to caps (first word is uppercase).txt  2- display content.txt  3- empty file.txt  4- encrpt file.txt  5- decrypt file.txt  6- merge two files.txt  7- count the number of words.txt  8- count the number of character.txt  9- count the number of lines.txt  dealing with file.txt  description.txt  design.ai
text editor/QT GUI/: CMakeLists.txt  Img.qrc  addtextwindow.cpp  addtextwindow.h  all_functions.h  howsavewindow.h  mainfilename.cpp  mainfilename.h  mainfilename.ui  mainwindow.ui  messagewindow.cpp  messagewindow.h  messagewindow.ui  savenewfilename.h  showcontentwindow.cpp  showcontentwindow.h  wordtimeswindow.cpp  wordtimeswindow.h  wordtimeswindow.ui
text editor/code/: new_text.txt  tds.txt  text_managing.cpp
text editor/console/: CMakeLists.txt  all_functions.cpp  main_menu.cpp
